# GB_OLC_Jam2020

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
aseprite/: character_face_-_walk.aseprite  character_side_-_walk.aseprite  game_over.aseprite  hackerman_artwork.aseprite  hackerman_side_walk.aseprite  hackerman_typing.aseprite  machine.aseprite  mummy_back.aseprite  mummy_face.aseprite  mummy_side.aseprite  palette.aseprite  tileset.aseprite
assets/: GB tilesheet 4 colours.aseprite  character_back_-_wal.aseprite  character_back_-_walk_.aseprite  gui.aseprite  items.aseprite  machine.aseprite  machine_activate.aseprite  museum.tmx  palette.aseprite  tileset.aseprite  warehouse.tmx  wasp.aseprite
assets/audio/: egypt.nsf
assets/maps/: egypt_in1.tmx  egypt_out.tmx  museum.tmx  museum_intro.tmx  warehouse.tmx  warehouse_intro1.tmx
assets/maps/tilesets/: computer.tsx  machine.tsx  sands.aseprite  tileset.tsx  tileset_int.aseprite  tileset_int.tsx
famitracker/: egypt.ftm
include/: Artifact.hpp  Enemy.hpp  Game.hpp  GameAccess.hpp  GameState.hpp  HUD.hpp  Item.hpp  MapCollisions.hpp  Palette.hpp  PaletteShiftTransition.hpp  Player.hpp  ShaderTransition.hpp  Spike.hpp  TextBox.hpp  WaveTransition.hpp
include/NasNas/core/: Anim.hpp  BitmapText.hpp  Camera.hpp  Scene.hpp
include/NasNas/data/: Config.hpp  Rect.hpp
include/NasNas/ecs/: BaseEntity.hpp  InputsComponent.hpp  PhysicsComponent.hpp  SpriteComponent.hpp
include/NasNas/tilemapping/: PropertiesContainer.hpp  TileLayer.hpp  TiledMap.hpp
include/NasNas/ui/: TypedText.hpp
include/entities/: BigMummy.hpp  Enemy.hpp  Hackerman.hpp  Mummy.hpp  Player.hpp  Wasp.hpp
include/states/: EndGameState.hpp  GameOverState.hpp  LevelState.hpp  MuseumIntroState.hpp  MuseumLevelState.hpp  TitleScreenState.hpp  WarehouseIntroState.hpp  WarehouseLevelState.hpp  WarehouseState.hpp
include/transitions/: PaletteShiftTransition.hpp  WaveTransition.hpp
src/: Artifact.cpp  Enemy.cpp  Game.cpp  GameAccess.cpp  GameState.cpp  HUD.cpp  Item.cpp  MapCollisions.cpp  Palette.cpp  PaletteShiftTransition.cpp  Player.cpp  ShaderTransition.cpp  Spike.cpp  TextBox.cpp  WaveTransition.cpp
src/NasNas/core/: Anim.cpp  App.cpp  BitmapText.cpp  Camera.cpp  Scene.cpp
src/NasNas/data/: Config.cpp
src/NasNas/ecs/: BaseEntity.cpp  PhysicsComponent.cpp  SpriteComponent.cpp
src/NasNas/tilemapping/: ObjectLayer.cpp  PropertiesContainer.cpp  TileLayer.cpp  TiledMap.cpp  Tileset.cpp
src/NasNas/ui/: TypedText.cpp
src/entities/: BigMummy.cpp  Enemy.cpp  Hackerman.cpp  Mummy.cpp  Player.cpp  Wasp.cpp
src/states/: EndGameState.cpp  GameOverState.cpp  LevelState.cpp  MuseumIntroState.cpp  MuseumLevelState.cpp  TitleScreenState.cpp  WarehouseIntroState.cpp  WarehouseLevelState.cpp  WarehouseState.cpp
src/transitions/: PaletteShiftTransition.cpp  WaveTransition.cpp
